# nes-emu

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: cpu.h  memory.h  nes_c_wrapper.h
include/core/: controller.h  cppwrapper.hpp  cpu.h  errors.h  memory.h  ppu.h
src/: cpu.c  main.cpp  memory.c  ppu.c
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nescontext.cpp  nescontext.h  nescontroller.cpp  nescontroller.h  nesscreen.cpp  nesscreen.h  nestablemodel.h  openglwidget.cpp  openglwidget.h
src/core/: CMakeLists.txt  controller.c  controllerp.h  cppwrapper.cpp  cpu.c  memory.c  memoryp.h  ppu.c  ppup.h
tests/: CMakeLists.txt  core_tests.cpp  harte.cpp  harte.hpp  harte_tests.cpp  nestest.cpp  nestest.hpp
